--- a/src/partials/screen1.html
+++ b/src/partials/screen1.html
@@ -29,7 +29,8 @@
 			</div>
 
 			<div class="sign-up__info">
-				<!-- <p class="upper-text">Pre-ICO стартует скоро!</p> -->
+				<p class="upper-text">Pre-ICO продлится до 15.12.2017.</p>
+				<p class="upper-text">ICO стартует 20.01.2018!</p>
 				<p>Успей зарегистрироваться и приобрести токен по специальной стоимости!</p>
 			</div>
 		</div>
