--- a/src/partials/screen8.html
+++ b/src/partials/screen8.html
@@ -19,7 +19,7 @@
 						</div>
 						<div class="feature__text feature__text_white">Рисковать, изучая <br> <span class="feature__text feature__text_big">100 500</span> <br> «хайповых» проектов</div>
 					</div>
-				</li> 
+				</li>
 				<li class="feature feature_wide">
 					<div class="feature__inner">
 						<div class="feature__img feature__img_big">
@@ -27,7 +27,7 @@
 						</div>
 						<div class="feature__text feature__text_white">Бояться убытков <br> от курсовых <br> скачков на биржах <br> криптовалют</div>
 					</div>
-				</li> 
+				</li>
 			</ul>
 		</div>
 
@@ -36,6 +36,10 @@
 		<div class="btn-wrap btn-wrap_pad">
 			<a href="https://ico.zeus-token.io/register?lang=ru " class="btn btn_mod btn_orange">купить Зевс токен</a>
 		</div>
-
+		<form class="send-mail-form">
+			<label for="email">Оставьте свой почтовый ящик для получения новостей</label><br>
+			<input type="email" id="email" class="email-text" required />
+			<input type="submit" value="Подписаться" class="email-send">
+		</form>
 	</div>
 </section>
