--- a/src/partials/screen7.html
+++ b/src/partials/screen7.html
@@ -119,3 +119,156 @@
 
 	</div>
 </section>
+<section class="section" id="info">
+	<div class="row row_center">
+		<h2 class="title-h2">Информация и документы</h2>
+		<div class="info__links">
+			<ul class="info__links__list">
+				<li>
+					<a href="https://www.coinspeaker.com/2017/10/04/zeus-first-eco-mining-world/" class="info__links__list__link" target="_blanc">
+						<div class="info__links__list__link__item">
+							<img src="img/info/Screenshot_1.jpg" alt="info">
+							<p class="info__links__list__link__item__site">
+								coinspeaker
+							</p>
+							<p class="info__links__list__link__item__theme"><span>
+								ZEUS – the First Eco-Mining in the World</span>
+							</p>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a href="https://ibigdan.livejournal.com/20994172.html" class="info__links__list__link" target="_blanc">
+						<div class="info__links__list__link__item">
+							<img src="img/info/Screenshot_2.jpg" alt="info">
+							<p class="info__links__list__link__item__site">
+								ibigdan.livejournal
+							</p>
+							<p class="info__links__list__link__item__theme"><span>
+								Эко-деньги</span>
+							</p>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a href="https://www.cryptocoinsnews.com/zeus-first-eco-mining-world/" class="info__links__list__link" target="_blanc">
+						<div class="info__links__list__link__item">
+							<img src="img/info/Screenshot_3.jpg" alt="info">
+							<p class="info__links__list__link__item__site">
+								cryptocoinsnews
+							</p>
+							<p class="info__links__list__link__item__theme"><span>
+								ZEUS – the First Eco-Mining in the World</span>
+							</p>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a href="http://altcoinalerts.com/zeus-first-ecocryptomining-world/" class="info__links__list__link" target="_blanc">
+						<div class="info__links__list__link__item">
+							<img src="img/info/Screenshot_4.jpg" alt="info">
+							<p class="info__links__list__link__item__site">
+								altcoinalerts
+							</p>
+							<p class="info__links__list__link__item__theme"><span>
+								ZEUS: The First EcoCryptoMining in the World</span>
+							</p>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a href="https://bitcoinexchangeguide.com/zeus-token-ico/" class="info__links__list__link" target="_blanc">
+						<div class="info__links__list__link__item">
+							<img src="img/info/Screenshot_5.jpg" alt="info">
+							<p class="info__links__list__link__item__site">
+								bitcoinexchangeguide
+							</p>
+							<p class="info__links__list__link__item__theme">
+								<span>Zeus Token ICO – Profitable Eco Cryptocurrency Mining Investing?</span>
+							</p>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a href="https://cryptoinsider.21mil.com/zeus-first-ecocryptomining-world/" class="info__links__list__link" target="_blanc">
+						<div class="info__links__list__link__item">
+							<img src="img/info/Screenshot_6.jpg" alt="info">
+							<p class="info__links__list__link__item__site">
+								cryptoinsider.21mil
+							</p>
+							<p class="info__links__list__link__item__theme">
+								<span>ZEUS: The first EcoCryptoMining in the world</span>
+							</p>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a href="http://hajar-bitcoin.blogspot.com/2017/10/zeus-token-sebuah-eco-crypto-mining.html" class="info__links__list__link" target="_blanc">
+						<div class="info__links__list__link__item">
+							<img src="img/info/Screenshot_7.jpg" alt="info">
+							<p class="info__links__list__link__item__site">
+								hajar-bitcoin.blogspot
+							</p>
+							<p class="info__links__list__link__item__theme">
+								<span>Zeus Token sebuah Eco Crypto Mining pertama di blockchain.</span>
+							</p>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a href="http://cryptonesia04.blogspot.com/2017/10/zeus-token-sebuah-eco-crypto-mining.html" class="info__links__list__link" target="_blanc">
+						<div class="info__links__list__link__item">
+							<img src="img/info/Screenshot_8.jpg" alt="info">
+							<p class="info__links__list__link__item__site">
+								cryptonesia04.blogspot
+							</p>
+							<p class="info__links__list__link__item__theme">
+								<span>Zeus Token sebuah Eco Crypto Mining pertama di blockchain. </span>
+							</p>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a href="https://medium.com/@New_Mariescha/breaking-news-zeus-token-the-first-eco-crypto-mining-at-blockchain-688db1f8881" class="info__links__list__link" target="_blanc">
+						<div class="info__links__list__link__item">
+							<img src="img/info/Screenshot_9.jpg" alt="info">
+							<p class="info__links__list__link__item__site">
+								medium.com/@New_Mariescha
+							</p>
+							<p class="info__links__list__link__item__theme">
+								<span>Breaking News — Zeus Token The First ECO Crypto Mining at Blockchain</span>
+							</p>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a href="https://bitcosmile.com/zeus-green-ecocrypto-pertama-di-dunia/" class="info__links__list__link" target="_blanc">
+						<div class="info__links__list__link__item">
+							<img src="img/info/Screenshot_10.jpg" alt="info">
+							<p class="info__links__list__link__item__site">
+								bitcosmile
+							</p>
+							<p class="info__links__list__link__item__theme">
+								<span>Zeus Green Ecocrypto Pertama di Dunia</span>
+							</p>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a href="http://www.makcrypto.com/2017/11/zeus-coping-with-blockchain.html" class="info__links__list__link" target="_blanc">
+						<div class="info__links__list__link__item">
+							<img src="img/info/Screenshot_11.jpg" alt="info">
+							<p class="info__links__list__link__item__site">
+								makcrypto
+							</p>
+							<p class="info__links__list__link__item__theme">
+								<span>"Zeus" Coping with Blockchain Technological Environmental pollution</span>
+							</p>
+						</div>
+					</a>
+				</li>
+			</ul>
+		</div>
+		<a href="merged.pdf" class="info__contract"><img src="img/pdf.png" alt="pdf" class="info__pdf"> Контракт  о покупке оборудования и строительстве завода с WABIO</a>
+	</div>
+</section>
