--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -87,6 +87,54 @@
 				height: 100%
 				width: 0
 
+.info__links
+	&__list
+		font-size: 18px
+		margin-bottom: 50px
+		li
+			display: inline-block
+			vertical-align: top
+			img
+				width: 100%
+				border-radius: 10px 10px 0px 0px
+		&__link
+			text-decoration: none
+			color: #000
+			font-size: 18px
+			&__item
+				width: 200px
+				height: 300px
+				margin: 30px 30px 0  30px
+				&__site
+					font-size: 10px
+					text-align: left
+					text-transform: uppercase
+					padding-left: 10px
+					padding-top: 20px
+				&__theme
+					font-weight: bold
+					padding: 20px 10px
+				&:hover
+					box-shadow: 0 0 0 5px #D7D7DB
+					border-radius: 10px
+					span
+						color: #008EA4
+
+.info__contract
+	margin-top: 30px
+	padding: 50px 0 30px
+	color: #000
+	text-decoration: none
+	font-size: 22px
+	font-weight: bold
+	&:hover
+		color: #008EA4
+
+.info__pdf
+	width: 30px
+	margin-bottom: -6px
+	margin-right: 10px
+
 .table-indicators
 	max-width: 610px
 	margin: 0 auto 30px
