--- a/src/partials/screen1.html
+++ b/src/partials/screen1.html
@@ -18,6 +18,7 @@
 				<a href="https://t.me/joinchat/Cg9KDwhfwYZgztRVemWnwQ"><i class="icon-telegram"></i></a>
 				<a href="https://join.slack.com/t/zeus-official/shared_invite/enQtMjU0MzA0MTk5NjM2LTYxMGE2MWY0MWQzOTgyNmU1ZjY4ODM5OTE0ZGQzOTExYjc0YmU3NWY0YmYzZTBjMDg5ZDViNjM4Mzc1YTFmOTQ"><i class="icon-slack"></i></a>
 				<a href="mailto:info@zeus-token.io"><i class="icon-mail"></i></a>
+				<a href="https://bitcointalk.org/index.php?topic=2194462.msg22039019#msg22039019"><i class="fa fa-btc" aria-hidden="true"></i></a>
 			</div>
 
 		</div>
