--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -16,6 +16,8 @@
 	float: right
 	margin-right: 90px
 	height: 60px
+	+r(1074)
+		margin-right: 80px
 	&__list
 		font-size: 0
 		height: 100%
@@ -59,3 +61,10 @@
 		span
 			vertical-align: middle
 			display: inline-block
+		+r(1074)
+			letter-spacing: -0.5px
+			font-size: 13px
+.fa
+	font-size: 50px
+	vertical-align: 3px
+	transform: rotate(20deg)
