--- a/src/partials/screen1.html
+++ b/src/partials/screen1.html
@@ -31,7 +31,7 @@
 
 			<div class="sign-up__info">
 				<p class="upper-text">Pre-ICO продлится до 15.12.2017.</p>
-				<p class="upper-text">ICO стартует 25.01.2018!</p>
+				<p class="upper-text">ICO продлится c 15.12.2017 по 25.01.2018!</p>
 				<p>Успей зарегистрироваться и приобрести токен по специальной стоимости!</p>
 			</div>
 		</div>
